🚀 Add post /chismes endpoint
