# app/Http/Resources/UserResource.php
@@ -5,6 +5,22 @@ namespace App\Http\Resources;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
+/**
+ * Class UserResource
+ * 
+ * @OA\Schema(
+ *      title="User",
+ *      description="User model",
+ *      required={"id", "name", "email"},
+ *      @OA\XML(
+ *          name="User"
+ *      ),
+ * 
+ *      @OA\Property(property="id", type="string"),
+ *      @OA\Property(property="name", type="string"),
+ *      @OA\Property(property="email", type="string")
+ * )
+ */
 class UserResource extends JsonResource
 {
     /**
