# storage/api-docs/api-docs.json
@@ -8,7 +8,7 @@
         "version": "0.1.0"
     },
     "paths": {
-        "/api/user": {
+        "/api/chismes": {
             "get": {
                 "tags": [
                     "Chismes"
@@ -40,15 +40,77 @@
                 "security": {
                     "bearerAuth": {}
                 }
+            },
+            "post": {
+                "tags": [
+                    "Chismes"
+                ],
+                "operationId": "createChisme",
+                "requestBody": {
+                    "$ref": "#/components/requestBodies/Chisme"
+                },
+                "responses": {
+                    "201": {
+                        "description": "Chisme created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ChismeResource"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation errors",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    }
+                },
+                "security": {
+                    "bearerAuth": {}
+                }
             }
         }
     },
     "components": {
         "schemas": {
+            "ChismeCommentResource": {
+                "title": "Chisme Comment",
+                "description": "Chisme comment model",
+                "required": [
+                    "id",
+                    "content",
+                    "author_id",
+                    "chisme_id"
+                ],
+                "properties": {
+                    "id": {
+                        "description": "Class ChismeCommentResource",
+                        "type": "string"
+                    },
+                    "content": {
+                        "type": "string"
+                    },
+                    "author_id": {
+                        "type": "string"
+                    },
+                    "chisme_id": {
+                        "type": "string"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Chisme Comment"
+                }
+            },
             "ChismeResource": {
                 "title": "Chisme",
                 "description": "Chisme model",
                 "required": [
+                    "id",
                     "title",
                     "content",
                     "author_id"
@@ -66,11 +128,65 @@
                     },
                     "author_id": {
                         "type": "string"
+                    },
+                    "author": {
+                        "$ref": "#/components/schemas/UserResource"
+                    },
+                    "comments": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/ChismeCommentResource"
+                        }
                     }
                 },
                 "type": "object",
                 "xml": {
                     "name": "Chisme"
+                }
+            },
+            "UserResource": {
+                "title": "User",
+                "description": "User model",
+                "required": [
+                    "id",
+                    "name",
+                    "email"
+                ],
+                "properties": {
+                    "id": {
+                        "description": "Class UserResource",
+                        "type": "string"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "email": {
+                        "type": "string"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "User"
+                }
+            }
+        },
+        "requestBodies": {
+            "Chisme": {
+                "required": true,
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "properties": {
+                                "title": {
+                                    "type": "string"
+                                },
+                                "content": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    }
                 }
             }
         },
